--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "express-jwt": "^5.3.1",
+    "google-map-react": "^1.1.5",
     "jsonwebtoken": "^8.5.1"
   },
   "boilerplate": {
