--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "config": "^3.2.4",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
